cargo-features = ["edition2024"]

[package]
edition = "2024"
license = "MIT"
name = "pinocchio_amm"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "pinocchio_amm"

[dependencies]
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve", version = "0.1.0" }
pinocchio = "0.10.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
